UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/DIDTypeSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DIDTypeSettings For DID Type Order</description>
    <label>DIDTypeSettings</label>
</CustomObject>