UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/AutoAttendantNew__c.field-meta.xml
<CustomField>
    <fullName>AutoAttendantNew__c</fullName>
    <label>AutoAttendantNew</label>
    <length>255</length>
    <type>Text</type>
</CustomField>