UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/AutoAttendantPortIn__c.field-meta.xml
<CustomField>
    <fullName>AutoAttendantPortIn__c</fullName>
    <label>AutoAttendantPortIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>