UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/DPI_Product_General_Voice__c.field-meta.xml
<CustomField>
    <fullName>DPI_Product_General_Voice__c</fullName>
    <label>DPI Product General Voice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>