UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/DPI_Products_VP911__c.field-meta.xml
<CustomField>
    <fullName>DPI_Products_VP911__c</fullName>
    <label>DPI Products VP911</label>
    <length>255</length>
    <type>Text</type>
</CustomField>