UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/General_Voice_Mail_PortIn__c.field-meta.xml
<CustomField>
    <fullName>General_Voice_Mail_PortIn__c</fullName>
    <label>General Voice Mail PortIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>