UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/LeadPlanItemName__c.field-meta.xml
<CustomField>
    <fullName>LeadPlanItemName__c</fullName>
    <label>LeadPlanItemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>