UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Multi_Hunt_Line_Product__c.field-meta.xml
<CustomField>
    <fullName>Multi_Hunt_Line_Product__c</fullName>
    <label>Multi Hunt Line Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>