UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Multi_Line_Hunt_Group_Pilot_New__c.field-meta.xml
<CustomField>
    <fullName>Multi_Line_Hunt_Group_Pilot_New__c</fullName>
    <label>Multi-Line Hunt Group Pilot New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>