UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/New_DID_Range__c.field-meta.xml
<CustomField>
    <fullName>New_DID_Range__c</fullName>
    <label>New DID Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>