UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Port_In__c.field-meta.xml
<CustomField>
    <fullName>Port_In__c</fullName>
    <label>Port In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>