UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Toll_Free_Additional_SNE_Code__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Additional_SNE_Code__c</fullName>
    <label>Toll Free Additional SNE Code</label>
    <type>TextArea</type>
</CustomField>