UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Toll_Free_UCF_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_UCF_Product_Code__c</fullName>
    <label>Toll Free UCF Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>