UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/UCF_Additional_DID__c.field-meta.xml
<CustomField>
    <fullName>UCF_Additional_DID__c</fullName>
    <label>UCF Additional DID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>