UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/UCF_Auto_Attendant_Code__c.field-meta.xml
<CustomField>
    <fullName>UCF_Auto_Attendant_Code__c</fullName>
    <label>UCF Auto Attendant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>