UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Vacant_Spare_Additional_DID_New__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Spare_Additional_DID_New__c</fullName>
    <label>Vacant/Spare/Additional DID New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>