UCF-APR2.4/ftr main/force-app/main/default/objects/DIDTypeSettings__c/fields/Vacant_Spare_Additional_DID_PortIn__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Spare_Additional_DID_PortIn__c</fullName>
    <label>Vacant/Spare/Additional DID PortIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>